--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -16,130 +16,178 @@
             <source src="./multimedia/background.mp4" type="video/mp4">
         </video>
     </div>
-    <header>
-        <nav class="menu">
-            <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#nosotros">Nosotros</a></li>
-                <li><a href="#socios">Socios</a></li>
-                <li><a href="#reprocann">Reprocann</a></li>
-            </ul>
-        </nav>
-    </header>
+
+    <div class="meteorito">
+        <img src="./multimedia/meeteorito.gif" alt="meteorito">
+    </div>
 
     <main class="contenedor">
-        <div class="titulo-contenedor">
-            <h1 class="titulo__principal">
-                <img src="./multimedia/blow.png" class="titulo__principal" alt="Logo del Club Blow">
-            </h1>
-        </div>
-        <div class="marciano__verde">
-            <img src="./multimedia/24-removebg-preview.png" alt="">
-        </div>
-        <div class="marciano__rojo"><img src="" alt="">
-        </div>
         <section id="inicio">
-            <div class="contenedor__intro">
-                <p class="parrafo__intro">
-                    En Blow, promovemos un enfoque seguro y responsable hacia el consumo de cannabis, con énfasis en el
-                    conocimiento y la inclusión. Nos dedicamos a crear un espacio donde se puedan compartir experiencias
-                    y
-                    explorar la planta con fines medicinales. Nuestro objetivo es desmitificar el cannabis y eliminar
-                    estigmas,
-                    proporcionando información científica y basada en experiencias. Buscamos construir una comunidad
-                    educada
-                    que valore los beneficios del cannabis y lo utilice de manera consciente y segura.
-                </p>
+            <div class="titulo-contenedor">
+                <h1 class="titulo__principal">
+                    <img src="./multimedia/logobloww.png" class="logo" alt="Logo del Club Blow">
+                </h1>
             </div>
         </section>
+
+        <section id="intro">
+            <div class="contenedor__intro">
+                <h1 class="titulo__intro">Intro</h1>
+                <div class="intro-contenido">
+                    <div class="texto-marciano">
+                        <div class="marciano">
+                            <img src="./multimedia/marcianoRojo.png" alt="Marciano rojo">
+                        </div>
+                        <div class="texto-contenido">
+                            <p class="parrafo__intro">
+                                En Blow, promovemos un enfoque seguro y responsable hacia el consumo de cannabis, con
+                                énfasis en el conocimiento y la inclusión. Nos dedicamos a crear un espacio donde se
+                                puedan
+                                compartir experiencias y explorar la planta con fines medicinales. Nuestro objetivo es
+                                desmitificar el cannabis y eliminar estigmas, proporcionando información científica y
+                                basada en
+                                experiencias. Buscamos construir una comunidad educada que valore los beneficios del
+                                cannabis y
+                                lo utilice de manera consciente y segura.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <section id="nosotros">
             <div class="contenedor__nosotros">
-                <h1 class="titulo__nosotros">Quienes somos?</h1>
-                <p class="parrafo__nosotros">Blow está compuesto por un grupo diverso con interés en el cannabis,
-                    comprometido
-                    con su usos
-                    responsable y consciente. Valoramos la inclusión, el respeto y la diversidad, creando un entorno en
-                    el que todas las voces son escuchadas.La diversidad de nuestro equipo nos permite abordar el consumo
-                    desde
-                    múltiples perspectivas y ofrecer recursos adaptados a las necesidades de nuestros miembros.
-                </p>
+                <h1 class="titulo__nosotros">
+                    ¿Quiénes somos?
+                </h1>
+                <div class="texto-marciano-verde">
+                    <div class="marciano-verde">
+                        <img src="./multimedia/marciano-verde.png" alt="marciano verde">
+                    </div>
 
+                    <p class="parrafo__nosotros">Blow está compuesto por un grupo diverso con interés en el
+                        cannabis,
+                        comprometido con su uso responsable y consciente. Valoramos la inclusión, el respeto y la
+                        diversidad, creando un entorno en el que todas las voces son escuchadas. La diversidad de
+                        nuestro
+                        equipo nos
+                        permite abordar el consumo desde múltiples perspectivas y ofrecer recursos adaptados a las
+                        necesidades
+                        de nuestros miembros.
+                    </p>
+                </div>
                 <h2 class="titulo__secundario__nosotros">Educación y acceso responsable:</h2>
                 <p class="parrafo__secundario__nosotros">
-                    Ofrecemos talleres y capacitaciones sobre los beneficios, riesgos y uso responsable del cannabis.
+                    Ofrecemos talleres y capacitaciones sobre los beneficios, riesgos y uso responsable del
+                    cannabis.
                     Nuestro objetivo es brindar información confiable sobre sus propiedades medicinales, métodos de
-                    consumo y aspectos legales.
-                    Contamos con expertos que brindan orientación personalizada y organizamos seminarios con
-                    profesionales de la salud. Además, ofrecemos un ambiente seguro y regulado para el consumo,
-                    asegurándonos de que todos los productos cumplan con estrictos estándares de calidad y seguridad.
-
+                    consumo y aspectos legales. Contamos con expertos que brindan orientación personalizada y
+                    organizamos
+                    seminarios con profesionales de la salud. Además, ofrecemos un ambiente seguro y regulado para
+                    el
+                    consumo,
+                    asegurándonos de que todos los productos cumplan con estrictos estándares de calidad y
+                    seguridad.
                 </p>
             </div>
         </section>
+
         <section id="socios">
             <div class="contenedor__socios">
                 <h2 class="titulo__socios">Requisitos para ser miembro</h2>
                 <p class="parrafo__socios">
-                    En primer lugar, los aspirantes deben ser mayores de 18 años, asegurando que todos los miembros sean
-                    adultos responsables. Además, es obligatorio estar registrado en el Registro Nacional de Usuarios de
-                    Cannabis Medicinal (Reprocann), lo que garantiza que todos los socios estén formalmente reconocidos
-                    y autorizados para utilizar cannabis medicinal. </p>
-                <p class="parrafo__socios"> Es importante que los socios no desarrollen el autocultivo, ya que la ONG se
-                    encarga de todo el
-                    proceso de cultivo. Esto implica delegar a la organización la facultad de cultivar cannabis en
-                    nombre del socio, asegurando así que el cultivo se realice de manera profesional y conforme a todas
-                    las normativas legales y de seguridad. Por último, para formalizar la membresía, los interesados
-                    deben abonar una cuota inicial, que permite acceder a todos los beneficios y servicios ofrecidos por
-                    el club.</p>
+                    En primer lugar, los aspirantes deben ser mayores de 18 años, asegurando que todos los miembros
+                    sean adultos responsables. Además, es obligatorio estar registrado en el Registro Nacional de
+                    Usuarios de Cannabis Medicinal (Reprocann), lo que garantiza que todos los socios estén
+                    formalmente
+                    reconocidos y autorizados para utilizar cannabis medicinal.
+                </p>
+                <p class="parrafo__socios"> Es importante que los socios no desarrollen el autocultivo, ya que la
+                    ONG se
+                    encarga de todo el proceso de cultivo. Esto implica delegar a la organización la facultad de
+                    cultivar
+                    cannabis en nombre del socio, asegurando así que el cultivo se realice de manera profesional y
+                    conforme
+                    a todas las normativas legales y de seguridad. Por último, para formalizar la membresía, los
+                    interesados
+                    deben abonar una cuota inicial, que permite acceder a todos los beneficios y servicios ofrecidos
+                    por
+                    el club.
+                </p>
             </div>
         </section>
+
         <section id="reprocann">
             <div class="contenedor__reprocann">
                 <h2 class="titulo__reprocann">Reprocann</h2>
                 <p class="parrafo__reprocann">
-                    Es el “registro del programa de cannabis" creado para registrar y autorizar a las personas que
-                    cumplan con los requisitos para acceder a todos los derivados de la planta de cannabis, con fines
-                    medicinales, terapeuticos y/o paliativos del dolor
+                    Es el “registro del programa de cannabis creado para registrar y autorizar a las personas que
+                    cumplan con los requisitos para acceder a todos los derivados de la planta de cannabis, con
+                    fines
+                    medicinales, terapéuticos y/o paliativos del dolor.
                 </p>
-                <h2 class="titulo__reprocan">Quienes pueden registrar un cultivo?</h2>
-                <p class="parrafo__reprocan">
-                    Cualquier persona puede inscribirse en el REPROCANN si cumple con los siguientes requisitos:
-                </p>
-                <ul class="lista__reprocan">
-                    <li>Cuenta con una indicación médica que justifique el uso de cannabis.</li>
-                    <li>Ha firmado el consentimiento informado correspondiente, cumpliendo con las condiciones
-                        establecidas por el Programa.</li>
-                    <li>Ha completado los requisitos y trámites solicitados por el Programa en tiempo y forma.</li>
-                    <li>El sistema validará los datos a través del portal Mi Argentina
-                        (https://www.argentina.gob.ar/miargentina), por lo que es necesario tener una cuenta en este
-                        sitio o en la app Mi Argentina.</li>
-                    <li>El registro puede ser realizado personalmente, a través de un familiar, o por una tercera
-                        persona u organización civil autorizada por la Autoridad de Aplicación.</li>
-                </ul>
-                <h2 class="titulo__reprocann">¿Cómo puedo registrarme?
-                </h2>
-                <p class="parrafo__reprocann">Para inscribirse en el REPROCANN, el paciente debe:
-                </p>
-                <ul class="lista__reprocann">
+                <h3 class="titulo__secundario__reprocann">¿Cómo puedo registrarme en Reprocann?</h3>
+                <p class="inscription">Para inscribirse en el REPROCANN, el paciente debe:</p>
+                <ul class="lista__inscripcion">
                     <li>Contar con una indicación médica.</li>
-                    <li>Haber firmado el consentimiento informado y la declaración jurada correspondiente, cumpliendo
+                    <li>Haber firmado el consentimiento informado y la declaración jurada correspondiente,
+                        cumpliendo
                         con las condiciones establecidas por el Programa.</li>
-                    <li>El sistema validará los datos a través del portal Mi Argentina. El paciente inicia el trámite en
-                        el aplicativo web, y el profesional de salud prescriptor debe adjuntar la Declaración Jurada y
-                        el Consentimiento Informado en formato PDF, vinculando al paciente, tercero u ONG con el
-                        cultivo.</li>
-                    <li>
-                        El profesional de salud prescriptor debe tener matrícula vigente. Las organizaciones no
-                        gubernamentales deben estar inscritas en el Registro Nacional de Organizaciones de la Sociedad
-                        Civil
-                        vinculadas con la Salud, dependiente de la Dirección Nacional de Relaciones Institucionales del
-                        Ministerio de Salud de la Nación.
+                    <li>El sistema validará los datos a través del portal Mi Argentina.</li>
+                    <li>El paciente inicia el trámite en el aplicativo web, y el profesional de salud prescriptor
+                        debe
+                        adjuntar la Declaración Jurada y el Consentimiento Informado en formato PDF, vinculando al
+                        paciente,
+                        tercero u ONG con el cultivo.
                     </li>
+                    <li>El profesional de salud prescriptor debe tener matrícula vigente.</li>
+                    <li>Las organizaciones no gubernamentales deben estar inscritas en el Registro Nacional de
+                        Organizaciones
+                        de la Sociedad Civil vinculadas con la Salud, dependiente de la Dirección Nacional de
+                        Relaciones
+                        Institucionales del Ministerio de Salud de la Nación.</li>
                 </ul>
-            </div>
 
+                <p class="beneficios__reprocann">Si querés unirte a Blow y aprovechar los beneficios de ser socio,
+                    seguí estos pasos:</p>
+                <p class="lista__beneficios">Ser mayor de 18 años - Estar registrado en REPROCANN - No ejercer el
+                    autocultivo - Delegar la facultad de cultivo a Blow - Obtener aprobación de la comisión
+                    directiva - Pagar
+                    la cuota inicial y mensual.
+                </p>
+            </div>
         </section>
     </main>
+
+    <button class="scroll-button" id="scrollButton">Ver más</button>
+
+    <script>
+        // Seleccionamos el botón de scroll
+        const scrollButton = document.getElementById('scrollButton');
+
+        // Inicializamos un contador para rastrear la sección actual
+        let currentSection = 0;
+
+        // Array de IDs de secciones en el orden para el scroll hacia abajo
+        const sections = ['intro', 'nosotros', 'socios', 'reprocann'];
+
+        // Añadimos un evento de clic al botón
+        scrollButton.addEventListener('click', function () {
+            // Si hay más secciones para desplazarse
+            if (currentSection < sections.length) {
+                // Hacemos scroll suave hacia la sección actual
+                document.getElementById(sections[currentSection]).scrollIntoView({ behavior: 'smooth' });
+                // Aumentamos el contador para la próxima sección
+                currentSection++;
+            } else {
+                // Si hemos llegado al final, volvemos a la sección de inicio y reiniciamos el contador
+                document.getElementById('inicio').scrollIntoView({ behavior: 'smooth' });
+                currentSection = 0; // Reiniciamos el contador
+            }
+        });
+    </script>
 </body>
 
 </html>
