--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
         </video>
     </div>
 
-    <div class="meteorito">
-        <img src="./multimedia/meeteorito.gif" alt="meteorito">
-    </div>
+    <header>
+        <nav class="menu">
+            <ul>
+                <li><a href="#intro">Inicio</a></li>
+                <li><a href="#nosotros">Nosotros</a></li>
+                <li><a href="#socios">Socios</a></li>
+                <li><a href="#reprocann">Reprocann</a></li>
+            </ul>
+        </nav>
+
+    </header>
 
     <main class="contenedor">
         <section id="inicio">
@@ -34,62 +42,48 @@
             <div class="contenedor__intro">
                 <h1 class="titulo__intro">Intro</h1>
                 <div class="intro-contenido">
-                    <div class="texto-marciano">
-                        <div class="marciano">
-                            <img src="./multimedia/marcianoRojo.png" alt="Marciano rojo">
-                        </div>
-                        <div class="texto-contenido">
-                            <p class="parrafo__intro">
-                                En Blow, promovemos un enfoque seguro y responsable hacia el consumo de cannabis, con
-                                énfasis en el conocimiento y la inclusión. Nos dedicamos a crear un espacio donde se
-                                puedan
-                                compartir experiencias y explorar la planta con fines medicinales. Nuestro objetivo es
-                                desmitificar el cannabis y eliminar estigmas, proporcionando información científica y
-                                basada en
-                                experiencias. Buscamos construir una comunidad educada que valore los beneficios del
-                                cannabis y
-                                lo utilice de manera consciente y segura.
-                            </p>
-                        </div>
+                    <div class="texto-contenido">
+                        <p class="parrafo__intro">
+                            En Blow, promovemos un enfoque seguro y responsable hacia el consumo de cannabis, con
+                            énfasis en el conocimiento y la inclusión. Nos dedicamos a crear un espacio donde se
+                            puedan
+                            compartir experiencias y explorar la planta con fines medicinales. Nuestro objetivo es
+                            desmitificar el cannabis y eliminar estigmas, proporcionando información científica y
+                            basada en
+                            experiencias. Buscamos construir una comunidad educada que valore los beneficios del
+                            cannabis y
+                            lo utilice de manera consciente y segura.
+                        </p>
                     </div>
                 </div>
             </div>
+            </div>
         </section>
-
 
         <section id="nosotros">
             <div class="contenedor__nosotros">
                 <h1 class="titulo__nosotros">
                     ¿Quiénes somos?
                 </h1>
-                <div class="texto-marciano-verde">
-                    <div class="marciano-verde">
-                        <img src="./multimedia/marciano-verde.png" alt="marciano verde">
-                    </div>
 
-                    <p class="parrafo__nosotros">Blow está compuesto por un grupo diverso con interés en el
-                        cannabis,
-                        comprometido con su uso responsable y consciente. Valoramos la inclusión, el respeto y la
-                        diversidad, creando un entorno en el que todas las voces son escuchadas. La diversidad de
-                        nuestro
-                        equipo nos
-                        permite abordar el consumo desde múltiples perspectivas y ofrecer recursos adaptados a las
-                        necesidades
-                        de nuestros miembros.
-                    </p>
-                </div>
+                <p class="parrafo__nosotros">
+                    Blow está compuesto por un grupo diverso con interés en el cannabis, comprometido con su uso
+                    responsable y consciente. Valoramos la inclusión, el respeto y la diversidad, creando un entorno en
+                    el que todas las voces son escuchadas. La diversidad de nuestro equipo nos permite abordar el
+                    consumo desde múltiples perspectivas y ofrecer recursos adaptados a las necesidades de nuestros
+                    miembros.
+                </p>
+            </div>
+
+            <div class="contenedor__secundario__nosotros">
                 <h2 class="titulo__secundario__nosotros">Educación y acceso responsable:</h2>
                 <p class="parrafo__secundario__nosotros">
-                    Ofrecemos talleres y capacitaciones sobre los beneficios, riesgos y uso responsable del
-                    cannabis.
+                    Ofrecemos talleres y capacitaciones sobre los beneficios, riesgos y uso responsable del cannabis.
                     Nuestro objetivo es brindar información confiable sobre sus propiedades medicinales, métodos de
                     consumo y aspectos legales. Contamos con expertos que brindan orientación personalizada y
-                    organizamos
-                    seminarios con profesionales de la salud. Además, ofrecemos un ambiente seguro y regulado para
-                    el
-                    consumo,
-                    asegurándonos de que todos los productos cumplan con estrictos estándares de calidad y
-                    seguridad.
+                    organizamos seminarios con profesionales de la salud. Además, ofrecemos un ambiente seguro y
+                    regulado para el consumo, asegurándonos de que todos los productos cumplan con estrictos estándares
+                    de calidad y seguridad.
                 </p>
             </div>
         </section>
@@ -161,11 +155,9 @@
         </section>
     </main>
 
-    <button class="scroll-button" id="scrollButton">Ver más</button>
-
     <script src="js/script.js"></script>
 
-    
+
 </body>
 
 </html>
