agregado de form

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     la cuota inicial y mensual.
                 </p>
             </div>
-        </section>
+            <a href="./form/formulario.html" class="button__form">Formulario Inscripcion</a>
     </main>
 
     <script src="js/script.js"></script>
