--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
 
     <header>
         <nav class="menu">
-            <ul>
+            <ul class="menu-list" id="menu-list">
                 <li><a href="#intro">Inicio</a></li>
                 <li><a href="#nosotros">Nosotros</a></li>
                 <li><a href="#socios">Socios</a></li>
                 <li><a href="#reprocann">Reprocann</a></li>
             </ul>
+            <div class="menu-hamburger" id="menu-toggle">
+                &#9776; <!-- Este símbolo representa el menú hamburguesa -->
+            </div>
+            </div>
         </nav>
-
     </header>
 
     <main class="contenedor">
