--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
                 <li><a href="#socios">Socios</a></li>
                 <li><a href="#reprocann">Reprocann</a></li>
             </ul>
-            <div class="menu-hamburger" id="menu-toggle">
-                &#9776;
-            </div>
-            </div>
+            <div class="menu-hamburger" id="hamburger">☰</div>
         </nav>
     </header>
 
