--- a/form/formulario.html
+++ b/form/formulario.html
@@ -102,6 +102,32 @@
         button:hover {
             background-color: #0056b3;
         }
+
+        @media (max-width: 768px) {
+            .card {
+                max-width: 80%;
+                /* Ancho reducido en dispositivos pequeños */
+                padding: 15px;
+                /* Menos padding */
+                margin: 10px;
+                /* Asegura espacio para ver el fondo */
+            }
+
+            input,
+            select {
+                font-size: 16px;
+            }
+
+            h2 {
+                font-size: 22px;
+                margin-bottom: 20px;
+            }
+
+            button {
+                font-size: 18px;
+                padding: 12px;
+            }
+        }
     </style>
 </head>
 
