--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 
 <body>
     <div class="background-video">
-        <video autoplay muted loop>
+        <video autoplay muted loop playsinline>
             <source src="./multimedia/background.mp4" type="video/mp4">
+            Tu navegador no soporta videos en HTML5.
         </video>
     </div>
+
 
     <header>
         <nav class="menu">
