cambios en el formulario

--- a/form/formulario.html
+++ b/form/formulario.html
@@ -18,6 +18,7 @@
             margin: 0;
             font-family: "Montserrat", "Open Sans", sans-serif;
             background-color: #ffffff;
+
         }
 
         .container {
@@ -26,6 +27,8 @@
             align-items: center;
             width: 100%;
             padding: 20px;
+            padding-top: 80px;
+            padding-bottom: 80px;
         }
 
         .card {
